# fav-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: action-rs.yml
src/: args.rs  converter.rs  file.rs  image.rs  main.rs  template.rs
src/image/: image.rs  web.rs
