[package]
name = "favify"
description = "Generate a complete favicon set for your web applications with the desired target platforms"
homepage = "https://fav.namchee.dev"
repository = "https://github.com/Namchee/fav-cli"
readme = "README.md"
keywords = ["favicon", "generator"]
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"
license = "MIT"
exclude = [
    "samples/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = { version = "2" }
resvg = "0.26.1"
visioncortex = "0.8.0"
image = "0.24.5"
